changing buttons arround

--- a/main.css
+++ b/main.css
@@ -1,7 +1,4 @@
 
-body {
-}
-
 img { 
   width: 100%;
   height: auto;
@@ -21,6 +18,22 @@ img {
 .right-section {
   width: 80%;
   float: right;
+}
+
+.main-btn { 
+  margin: 0;
+  padding: 7px 0px;
+  border-style: none;
+  width: 25%;
+  display: inline-block;
+  text-align: center;
+  background-color: #EFF8F7;
+  color: #60BEAE;
+  text-decoration: none;
+}
+
+.main-btn:hover {
+  background-color: #D9EFEC;
 }
 
 .footer {
