added a .nvmrc file and set it to v5.9.0 and attempted to figure out how to do email section

--- a/main.css
+++ b/main.css
@@ -74,7 +74,12 @@ p {
 #email-section-1 {
 }
 
-#email-section-1 {
+#email-section-2 {
+  width: 60%;
+}
+
+#email-section-form {
+  width: 20%;
 }
 
 .bottom-dashed-hr {
