--- a/main.css
+++ b/main.css
@@ -62,6 +62,7 @@ p {
   width: 100%;
   height: 65px;
   margin: 0 auto;
+  margin-bottom: 50px;
   overflow: visible;
   position: relative;
   border-bottom: 1px dashed #E5E5E5;
@@ -79,19 +80,23 @@ p {
   width: 5%; 
   margin-top: 15px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 #email-section-2 {
+  margin-top: 20px;
+  font-size: 14;
+  margin-right: 20px;
   width: 60%;
 }
 
 #email-section-form {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 
 #email-section-3 {
-  width: 10%;
+  margin-right: 10px;
+  width: 13%;
 }
 
 #email-section-4 {
